# n-r-ai

./: .gitignore  AGENTS.md  README.md  RULES.md  RULES_EXTRACT_prev.txt  RULES_IMPLEMENTATION.md  pyproject.toml
src/n_r_ai/: __init__.py
src/n_r_ai/ai/: policy.py
src/n_r_ai/ai/agents/: base.py  llm_agent.py  random_agent.py
src/n_r_ai/ai/mcts/: mcts.py  node.py
src/n_r_ai/cli/: play.py  selfplay.py
src/n_r_ai/core/: actions.py  board.py  entities.py  game_state.py  rng.py  rules.py
src/n_r_ai/engine/: environment.py  simulator.py  validator.py
src/n_r_ai/server/: __main__.py  app.py  llm.py
src/n_r_ai/ui/: app.py
src/n_r_ai/utils/: serialize.py
tests/: test_actions_doors_shoot_room.py  test_ammo_and_attack_deck.py  test_doors_noise_v1.py  test_encounter_v1.py  test_endgame_and_events.py  test_event_bag_skeleton.py  test_exploration_map.py  test_noise_room_vs_corridor.py  test_phases_v1.py  test_rooms_fire_control.py  test_rooms_surgery_engine.py  test_rules_v1.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  api.ts
