[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n-r-ai"
version = "0.0.0"
description = "Board game AI player"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["board-game", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.24",
  "openai>=1.30",
]

[project.urls]
Homepage = "https://github.com/0xtyls/n-r-ai"
Issues = "https://github.com/0xtyls/n-r-ai/issues"
